--- a/x41t_defconfig
+++ b/x41t_defconfig
@@ -477,8 +477,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 #
 # x86 CPU frequency scaling drivers
 #
-# CONFIG_X86_PCC_CPUFREQ is not set
-CONFIG_X86_ACPI_CPUFREQ=y
+CONFIG_X86_PCC_CPUFREQ=m
+CONFIG_X86_ACPI_CPUFREQ=m
 CONFIG_X86_POWERNOW_K6=m
 CONFIG_X86_POWERNOW_K7=m
 CONFIG_X86_POWERNOW_K7_ACPI=y
@@ -944,7 +944,6 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 CONFIG_SENSORS_LIS3LV02D=m
 CONFIG_MISC_DEVICES=y
 # CONFIG_AD525X_DPOT is not set
-# CONFIG_ANDROID_PMEM is not set
 # CONFIG_IBM_ASM is not set
 # CONFIG_PHANTOM is not set
 # CONFIG_INTEL_MID_PTI is not set
@@ -1296,6 +1295,7 @@ CONFIG_BCM4329_NVRAM_PATH="/proc/calibration"
 CONFIG_BCMDHD=m
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
+# CONFIG_DHD_USE_STATIC_BUF is not set
 # CONFIG_HOSTAP is not set
 CONFIG_IPW2100=m
 # CONFIG_IPW2100_MONITOR is not set
@@ -1555,6 +1555,7 @@ CONFIG_TOUCHSCREEN_WM9712=y
 CONFIG_TOUCHSCREEN_WM9713=y
 CONFIG_TOUCHSCREEN_USB_COMPOSITE=m
 CONFIG_TOUCHSCREEN_USB_EGALAX=y
+# CONFIG_TOUCHSCREEN_USB_EGALAX_REVERSE is not set
 CONFIG_TOUCHSCREEN_USB_PANJIT=y
 CONFIG_TOUCHSCREEN_USB_3M=y
 CONFIG_TOUCHSCREEN_USB_ITM=y
@@ -2358,7 +2359,7 @@ CONFIG_USB_HID=y
 #
 # Special HID drivers
 #
-# CONFIG_HID_A4TECH is not set
+CONFIG_HID_A4TECH=m
 # CONFIG_HID_ACRUX is not set
 # CONFIG_HID_APPLE is not set
 # CONFIG_HID_BELKIN is not set
@@ -2372,20 +2373,21 @@ CONFIG_USB_HID=y
 # CONFIG_HID_EZKEY is not set
 # CONFIG_HID_KEYTOUCH is not set
 # CONFIG_HID_KYE is not set
-# CONFIG_HID_UCLOGIC is not set
-# CONFIG_HID_WALTOP is not set
+CONFIG_HID_UCLOGIC=m
+CONFIG_HID_WALTOP=m
 # CONFIG_HID_GYRATION is not set
 # CONFIG_HID_TWINHAN is not set
 # CONFIG_HID_KENSINGTON is not set
 # CONFIG_HID_LCPOWER is not set
 # CONFIG_HID_LOGITECH is not set
-# CONFIG_HID_MAGICMOUSE is not set
-# CONFIG_HID_MICROSOFT is not set
+CONFIG_HID_MAGICMOUSE=m
+CONFIG_HID_MICROSOFT=m
 # CONFIG_HID_MONTEREY is not set
 CONFIG_HID_MULTITOUCH=m
-# CONFIG_HID_NTRIG is not set
-# CONFIG_HID_ORTEK is not set
+CONFIG_HID_NTRIG=m
+CONFIG_HID_ORTEK=m
 # CONFIG_HID_PANTHERLORD is not set
+CONFIG_HID_PENMOUNT=m
 # CONFIG_HID_PETALYNX is not set
 # CONFIG_HID_PICOLCD is not set
 # CONFIG_HID_ROCCAT is not set
@@ -2401,7 +2403,8 @@ CONFIG_HID_MULTITOUCH=m
 # CONFIG_HID_SMARTJOYPLUS is not set
 # CONFIG_HID_TOPSEED is not set
 # CONFIG_HID_THRUSTMASTER is not set
-# CONFIG_HID_WACOM is not set
+CONFIG_HID_WACOM=m
+CONFIG_HID_WACOM_POWER_SUPPLY=y
 # CONFIG_HID_ZEROPLUS is not set
 # CONFIG_HID_ZYDACRON is not set
 CONFIG_USB_SUPPORT=y
